[tool.poetry]
name = "currencywatcher"
version = "0.1.0"
description = ""
authors = ["Collapsed Plug <hsp.tosh.5200113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
dataclass-wizard = "^0.22.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
